--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "particles.js": "^2.0.0",
     "react": "^18.3.1",
     "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.0.1",
+    "framer-motion": "^11.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
